--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "chalk": "1.1.3",
+    "nightmare": "2.8.1",
+    "twitter-url-parser": "0.0.1",
     "yargs": "4.6.0"
   },
   "devDependencies": {
