--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "chalk": "1.1.3",
     "nightmare": "2.8.1",
+    "tildify": "1.2.0",
     "twitter-url-parser": "0.0.1",
     "yargs": "4.6.0"
   },
