--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "babel-cli": "6.18.0",
-    "babel-preset-node6": "11.0.0",
+    "babel-preset-es2015": "6.18.0",
     "rimraf": "2.5.4"
   },
   "keywords": [
@@ -33,7 +33,7 @@
   ],
   "babel": {
     "presets": [
-      "node6"
+      "es2015"
     ]
   }
 }
