--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "dist/index.js",
   "bin": "dist/cli.js",
   "scripts": {
-    "build": "node_modules/.bin/babel lib -d dist -q",
+    "build": "node_modules/.bin/babel lib -d dist",
     "prebuild": "node_modules/.bin/rimraf dist",
     "prepublish": "npm run build"
   },
@@ -20,9 +20,10 @@
     "yargs": "4.6.0"
   },
   "devDependencies": {
-    "babel-cli": "6.18.0",
-    "babel-preset-es2015": "6.18.0",
-    "rimraf": "2.5.4"
+    "@babel/cli": "7.1.0",
+    "@babel/core": "7.1.0",
+    "@babel/preset-env": "7.1.0",
+    "rimraf": "2.6.2"
   },
   "keywords": [
     "twitter",
@@ -30,10 +31,5 @@
     "screenshot",
     "capture",
     "image"
-  ],
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
-  }
+  ]
 }
